@@ -245,24 +245,6 @@ Here is an example:
 See <a href="https://smarden.org/runit/">https://smarden.org/runit/</a>
 for recent informations.
 <hr>
-Related links:
-<ul>
-<li><a href="http://www.fefe.de/minit/">
-minit</a> - a small yet feature-complete init
-<li><a href="http://multivac.cwru.edu/svscan-1/">
-svscan as process 1</a> - by Paul Jarc
-<li><a href="ftp://ftp.cistron.nl/pub/people/miquels/sysvinit/">
-sysvinit</a> - source code
-<li><a href="http://www.freebsd.org/cgi/cvsweb.cgi/src/sbin/init/">
-FreeBSD's init</a> - CVS repository
-<li><a href="http://cvsweb.netbsd.org/bsdweb.cgi/src/sbin/init/">
-NetBSD's init</a> - CVS repository
-<li><a href="http://www.openbsd.org/cgi-bin/cvsweb/src/sbin/init/">
-OpenBSD's init</a> - CVS repository
-<li><a href="http://www.atnf.csiro.au/~rgooch/linux/boot-scripts/">
-Linux Boot Scripts</a> - by Richard Gooch
-</ul>
-<hr>
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
