@@ -1,3 +1,4 @@
+  * doc/index.html: remove section "Related links".
   * doc/index.html, faq.html: update links to supervision mailing list and
     list archives.
   * doc/benefits.html: remove references to Debian packages.
